<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.mindfusion.diagramming.DiagramView
        android:id="@+id/touchpad"
        android:layout_width="1950px"
        android:layout_height="510px"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        background="Red"
        android:contentDescription="@string/nothing"
        tools:context=".GraphIntegration" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/touchpad"
        android:layout_below="@+id/touchpad"
        android:text="@string/draw_edge_text_view"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/from_text_view"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toLeftOf="@+id/textView5"
        android:text="@string/articulation"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/touchpad"
        android:layout_marginRight="219dp"
        android:text="@string/space11"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#CD9575" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginRight="26dp"
        android:layout_toLeftOf="@+id/button1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/touchpad"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@+id/textView1"
       android:text="                                                      "
        android:textColor="#CD9575" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/to_text_view"
        android:textSize="13sp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/button1" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignTop="@+id/spinner1"
        android:layout_toRightOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="125dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="                                                           "/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView3" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/touchpad"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="10dp"
        android:text="@string/add_button"
        android:textSize="12sp" />

</RelativeLayout>